# GeneticDithering-C

./: .gitignore  .gitmodules  CMakeLists.txt  main.c
